Attempt to fix rendering on mobile

--- a/public/Style.css
+++ b/public/Style.css
@@ -111,7 +111,7 @@ body {
 /*Mobile devices.*/
 @media (max-width: 414px) {
     .currentVerb {
-        font-size: 76px;
+        font-size: 66px;
         overflow-wrap: break-word;
         word-wrap: break-word;
     }
@@ -135,7 +135,7 @@ body {
 @media (max-width: 414px) {
     .verbs-container {
         gap: 10px;
-        padding: 45px;
+        padding: 15px;
         overflow-wrap: break-word;
         word-wrap: break-word;
     }
